fix: remove extra spacing between benefits and footer - Remove spacing-h-md from footer - Adjust benefits section padding

--- a/src/pages/site/Home/Home.scss
+++ b/src/pages/site/Home/Home.scss
@@ -88,7 +88,7 @@
 }
 
 .our-benefits {
-    padding: 4rem 0;
+    padding: 4rem 0 0 0;
     font-size: 1.6rem;
     text-align: center;
     background-color: $brand-primary-color;
@@ -120,6 +120,7 @@
         gap: 3rem;
         max-width: 1200px;
         margin: 0 auto;
+        padding-bottom: 4rem;
     }
 
     &__item {
